# enody-py

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  llm.txt  pyproject.toml
.github/workflows/: build.yml
data/: emitter.json  fixture.json  source.json
enody/: __init__.py  colorimetry.py  data.py  interface.py  optimize.py
examples/: optimize_cct.py  optimize_chromaticity.py  plot_source.py
python/enody/: __init__.py  cli.py  colorimetry.py  data.py  device.py  interface.py  optimize.py
python/enody/data/: fixture.json  response.json
src/: lib.rs
tests/: test_interface.py  test_optimize.py  test_wifi.py
