[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "enody"
version = "0.1.3"
description = "SDK for Enody Lighting devices"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "colour-science",
    "tinygrad",
]

[project.scripts]
enody = "enody.cli:main"

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "enody._enody_rs"
python-source = "python"
